--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=traffic-prediction
 server.port=8080
 
-spring.datasource.url=jdbc:h2:file:./data/traffic;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:mem:trafficdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
